# cevo

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
inc/: ce_dispatch.h  ce_invoke_handler.h  ce_table.h  ce_types.h  logger.h
inputs/: demo.yaml
src/: ce_dispatch.c  ce_hash.c  ce_hash.h  logger.c  parser_utils.c  parser_utils.h
tools/: .flake8  CMakeLists.txt  Makefile  cli.py  ensure_venv.sh  gen_header.py  gen_invoke_handler.py  gen_signature_table.py  generate_apis.py  main.py  parser.py  pyproject.toml  run_tests.sh  utils.py
tools/tests/: test_generator.py  test_parser.py  test_utils.py
unit_test/: CMakeLists.txt  ce_dispatch_test_api.h  demo.h  test_dispatch.cpp  test_hash.cpp  test_parser_utils.cpp
